--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "server": "docker-compose up & npx prisma migrate dev"
+    "server": "docker-compose up & npx prisma migrate dev",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +20,15 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "18.14.1",
+    "@vitest/coverage-c8": "0.28.5",
+    "@vitest/ui": "0.28.5",
     "eslint": "8.34.0",
     "prisma": "4.10.1",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vite-tsconfig-paths": "4.0.5",
+    "vitest": "0.28.5"
   },
   "dependencies": {
     "@prisma/client": "4.10.1",
