--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
     "server": "docker-compose up & npx prisma migrate dev",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -23,6 +27,7 @@
     "@vitest/coverage-c8": "0.28.5",
     "@vitest/ui": "0.28.5",
     "eslint": "8.34.0",
+    "npm-run-all": "4.1.5",
     "prisma": "4.10.1",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
@@ -31,6 +36,7 @@
     "vitest": "0.28.5"
   },
   "dependencies": {
+    "@fastify/jwt": "6.7.0",
     "@prisma/client": "4.10.1",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.7",
