--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsup src --out-dir build",
     "server": "docker-compose up & npx prisma migrate dev",
     "test": "vitest run --dir src/use-cases",
-    "test:watch": "vitest --dir src/use-cases",
+    "test:e2e:watch": "vitest --dir src/http",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
@@ -24,11 +24,13 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "18.14.1",
+    "@types/supertest": "2.0.12",
     "@vitest/coverage-c8": "0.28.5",
     "@vitest/ui": "0.28.5",
     "eslint": "8.34.0",
     "npm-run-all": "4.1.5",
     "prisma": "4.10.1",
+    "supertest": "6.3.3",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
     "typescript": "4.9.5",
